--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "dayjs": "^1.11.6",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
     "ethers": "^5.7.2",
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.2",
     "typescript": "4.9.3",
-    "wagmi": "^0.8.6"
+    "wagmi": "^0.8.6",
+    "zod": "^3.19.1",
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
